Update app, index, home

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,13 @@
   <main role="main">
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">Welcome, people!</h1>
-      <p>If you all are at home, getting bored and looking for how to pass your time with your family, here is a simple solution, to stay at home and watch movies!</p>
+      <h1 class="display-3">Hello, people!</h1>
+      <p>If you all are at home, getting bored and looking for how to pass your time with your family, here is a simple solution, to stay at home and watch movies. Just enter the keywords here and get all the movies related to your search!</p>
+      <ul>
+        <li>Enter the keywords for your movie search.</li>
+        <li>A list of movies will be displayed according to your search.</li>
+        <li>The link below the movie will redirect you to the fmovies website, which will let you watch any movie online.</li>
+      </ul>
       <form action="/" class="form-inline" method="post">
       <div class="form-group mx-sm-3 mb-2">
        <label for="Search" class="sr-only">Search</label>
